[package]
name = "croncycle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
cron = "0.12.1"
env_logger = "0.11.3"
indicatif = "0.17.8"
log = "0.4.21"
