[package]
name = "croncycle"
description = "A simple cron job scheduler"
version = "0.1.1"
authors = [
    "Elaina <GreyElaina@outlook.com>"
]
edition = "2021"
license = "MIT"
repository = "https://github.com/GreyElaina/croncycle-rs"
keywords = ["cron", "scheduler", "job", "schedule"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
cron = "0.12.1"
env_logger = "0.11.3"
indicatif = "0.17.8"
log = "0.4.21"
